--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,13 @@ h6 {
   overflow: auto;
 }
 
-.education-entry,
 .work-entry,
 .project-entry {
   padding: 0 5%;
+}
+
+.education-entry {
+  padding: 8px 5%;
 }
 
 h1 {
